--- a/2hotels-management/pom.xml
+++ b/2hotels-management/pom.xml
@@ -49,6 +49,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.1.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
